[package]
name = "from_as"
version = "0.1.0"
authors = ["sreeise"]
edition = "2018"

[workspace]
members = [
  "derive_from_as",
  "from_as_file"
]

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
toml = "0.5"
derive_from_as = { path = "./derive_from_as" }
from_as_file = { path = "./from_as_file" }
