[package]
name = "from_as"
version = "0.1.1"
authors = ["sreeise"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sreeise/from_as"
description = "Traits and derive macros to Read and write types that implement serde Serialize and deserialize to files"

[workspace]
members = [
  "derive_from_as",
  "from_as_file"
]

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
toml = "0.5"
derive_from_as = {path = "derive_from_as"}
from_as_file = "0.1.1"
