[package]
name = "from_as"
version = "0.2.0"
authors = ["sreeise"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sreeise/from_as"
description = "Traits and derive macros to Read and write types that implement serde Serialize and deserialize to files"

[workspace]
members = [
  "derive_from_as",
  "from_as_file"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.20"
toml = "0.7.3"
derive_from_as = { path = "derive_from_as" }
from_as_file = { path = "from_as_file" }
