[package]
name = "derive_from_as"
version = "0.1.0"
authors = ["sreeise"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
serde = "1.0.88"
serde_json = "1.0.38"
serde_yaml = "0.8.9"
serde_derive = "1.0.88"
syn = "0.15.29"
quote = "0.6.11"
toml = "0.5"
from_as_file = { path = "../from_as_file" }
