[package]
name = "derive_from_as"
version = "0.1.0"
authors = ["sreeise"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
syn = { version = "0.15.29", features = ["full", "extra-traits"] }
quote = "0.6.11"
toml = "0.5"
from_as_file = { path = "../from_as_file" }
