[package]
name = "derive_from_as"
version = "0.1.1"
authors = ["sreeise"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sreeise/from_as"
description = "Traits to Read and write types that implement serde Serialize and deserialize to files"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.20"
syn = { version = "2.0.13", features = ["full", "extra-traits"] }
quote = "1.0.26"
toml = "0.7.3"
from_as_file = "0.1.1"
